104-brands-endpoints added
